@@ -350,6 +350,10 @@ class pts_test_profile_parser
 	{
 		return pts_strings::string_bool($this->xg('TestProfile/RequiresNetwork', 'FALSE')) || $this->get_test_hardware_type() == 'Network';
 	}
+	public function is_internet_required()
+	{
+		return pts_strings::string_bool($this->xg('TestProfile/RequiresInternet', 'FALSE'));
+	}
 	public function allow_cache_share()
 	{
 		return pts_strings::string_bool($this->xg('TestSettings/Default/AllowCacheShare'));
